--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import "~bootstrap/dist/css/bootstrap.css";  
+@import "./app/shared/styles/styles";
+
+html, body { 
+    height: 100%;
+ }
+body { margin: 0; font-family: 'Poppins', sans-serif; }
